Bug 498195 - On X11, "Alternatives" popup does not appear when panel is in Auto-Hide mode
Summary: On X11, "Alternatives" popup does not appear when panel is in Auto-Hide mode
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.2.4
Platform: Debian testing Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-01-03 08:38 UTC by luca
Modified: 2025-01-17 21:08 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description luca 2025-01-03 08:38:47 UTC
Debian Testing X11 Session. Wayland is ok.
If application menu bar is set to "auto hide", "show alternatives" window, in application launcher, does not appear after clicking on the relevant choice.

Operating System: Debian GNU/Linux Testing
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.8.0
Qt Version: 6.7.2
Kernel Version: 6.12.6-amd64 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i3-10100 CPU @ 3.60GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Manufacturer: ASUS
Comment 1 Nate Graham 2025-01-03 17:48:43 UTC
Does the "Alternatives" popup appear for any other widgets? e.g. the Icons-Only Task Manager or Digital Clock?
Comment 2 luca 2025-01-03 18:00:01 UTC
Hi,
"Alternatives" popup does not appear for any other widgets.
Comment 3 Bug Janitor Service 2025-01-15 16:02:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5074
Comment 4 Niccolò Venerandi 2025-01-17 09:32:29 UTC
Git commit 04ceb387c674338589c95887bcca74a164fbdb76 by Niccolò Venerandi.
Committed on 17/01/2025 at 09:32.
Pushed by niccolove into branch 'master'.

Make panels request attention when an alternatives dialog is shown

M  +16   -2    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/04ceb387c674338589c95887bcca74a164fbdb76
Comment 5 Niccolò Venerandi 2025-01-17 09:32:50 UTC
Git commit 9cdb58f03202595753f388866b7836c98ffd442f by Niccolò Venerandi.
Committed on 17/01/2025 at 09:32.
Pushed by niccolove into branch 'Plasma/6.3'.

Make panels request attention when an alternatives dialog is shown


(cherry picked from commit 04ceb387c674338589c95887bcca74a164fbdb76)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +16   -2    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9cdb58f03202595753f388866b7836c98ffd442f