Make panels request attention when an alternatives dialog is shown

BUG:498195